# rigpp

./: README.md
examples/: matrix.ma  nurbsCurve.ma  vector.ma
maya_module/: rigpp.mod
maya_module/rigpp/runtime/include/: readme.txt  rigpp  rigpp_math.hpp
maya_module/rigpp/scripts/: rigpp_utils.py
plugin/: CMakeLists.txt
plugin/include/: readme.txt
plugin/lib/debug/: readme.txt
plugin/lib/release/: readme.txt
plugin/source/: jithelper.hpp  main.cpp  rigpp.cpp  rigpp.h  rigpp_types.h  utils.hpp
vscode_project/: main.cpp
