cmake_minimum_required(VERSION 3.0)

project (rigpp) 

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
add_compile_options(/W0)

find_package( Maya REQUIRED )

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_CRT_SECURE_NO_WARNINGS -D_MT -D_DLL -D_DEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -D_CRT_SECURE_NO_WARNINGS -D_MT -D_DLL /GL /Gy /Zi /sdl- /FC /Oi /permissive-")

set(source
    source/jithelper.hpp 
    source/utils.hpp 
    source/rigpp_types.h
    source/main.cpp 
    source/rigpp.cpp
    source/rigpp.h)

add_library(rigpp SHARED ${source})

target_include_directories(rigpp PUBLIC 
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  ${MAYA_INCLUDE_DIR})

target_link_libraries(rigpp  
  ${MAYA_Foundation_LIBRARY} 
  ${MAYA_OpenMaya_LIBRARY} 
  ${MAYA_OpenMayaUI_LIBRARY} 
  ${MAYA_tbb_LIBRARY}
  version.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAArch64CodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAArch64AsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAArch64Desc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAArch64Disassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAArch64Info.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAArch64Utils.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAMDGPUCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAMDGPUAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAMDGPUDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAMDGPUDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAMDGPUInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAMDGPUUtils.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMARMCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMARMAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMARMDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMARMDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMARMInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMARMUtils.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAVRCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAVRAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAVRDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAVRDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAVRInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBPFCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBPFAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBPFDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBPFDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBPFInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMHexagonCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMHexagonAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMHexagonDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMHexagonDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMHexagonInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLanaiCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLanaiAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLanaiDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLanaiDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLanaiInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMipsCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMipsAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMipsDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMipsDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMipsInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMSP430CodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMSP430AsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMSP430Desc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMSP430Disassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMSP430Info.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMNVPTXCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMNVPTXDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMNVPTXInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMPowerPCCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMPowerPCAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMPowerPCDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMPowerPCDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMPowerPCInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMRISCVCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMRISCVAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMRISCVDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMRISCVDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMRISCVInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSparcCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSparcAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSparcDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSparcDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSparcInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSystemZCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSystemZAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSystemZDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSystemZDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSystemZInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMVECodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMVEAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMVEDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMVEDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMVEInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMWebAssemblyCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMWebAssemblyAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMWebAssemblyDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMWebAssemblyDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMWebAssemblyInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMWebAssemblyUtils.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMX86CodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMX86AsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMX86Desc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMX86Disassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMX86Info.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMXCoreCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMXCoreDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMXCoreDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMXCoreInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAnalysis.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMCore.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMipo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAggressiveInstCombine.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMInstCombine.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMInstrumentation.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMC.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMCParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMObjCARCOpts.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMOption.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMScalarOpts.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSupport.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMTransformUtils.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMVectorize.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangBasic.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangDriver.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangFrontend.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangFrontendTool.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangSerialization.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMIRParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMGlobalISel.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMCFGuard.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAsmPrinter.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMDebugInfoMSF.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSelectionDAG.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMCDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMCoverage.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLTO.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMPasses.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMTarget.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMCoroutines.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMIRReader.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBitWriter.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLinker.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMExtensions.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangRewriteFrontend.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangARCMigrate.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangStaticAnalyzerFrontend.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangStaticAnalyzerCheckers.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangStaticAnalyzerCore.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangCrossTU.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangIndex.lib  
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangParse.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangSema.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangAnalysis.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangASTMatchers.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangEdit.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangAST.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMFrontendOpenMP.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMProfileData.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMDebugInfoDWARF.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMObject.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMDebugInfoCodeView.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBitReader.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMTextAPI.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBinaryFormat.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMRemarks.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBitstreamReader.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangFormat.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangToolingInclusions.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangToolingCore.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangRewrite.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/clangLex.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMDemangle.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMCore.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMExecutionEngine.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMIRReader.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMInterpreter.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMJITLink.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMC.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMCJIT.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMObject.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMOrcShared.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMOrcJIT.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMOrcTargetProcess.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMPasses.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMRuntimeDyld.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSelectionDAG.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSupport.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMTarget.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMTransformUtils.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMX86CodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMX86AsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMX86Desc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMX86Disassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMX86Info.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMCoroutines.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMipo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMFrontendOpenMP.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLinker.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMObjCARCOpts.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMVectorize.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMInstrumentation.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAsmPrinter.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMDebugInfoMSF.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMGlobalISel.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBitWriter.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMScalarOpts.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAggressiveInstCombine.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMInstCombine.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAnalysis.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMProfileData.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMDebugInfoDWARF.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBitReader.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMTextAPI.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMCFGuard.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMRemarks.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBitstreamReader.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMCParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMCDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBinaryFormat.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMDebugInfoCodeView.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMDemangle.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAArch64CodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAArch64AsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAArch64Desc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAArch64Disassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAArch64Info.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAArch64Utils.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAMDGPUCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAMDGPUAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAMDGPUDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAMDGPUDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAMDGPUInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAMDGPUUtils.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMARMCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMARMAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMARMDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMARMDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMARMInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMARMUtils.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAVRCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAVRAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAVRDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAVRDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMAVRInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBPFCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBPFAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBPFDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBPFDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMBPFInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMHexagonCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMHexagonAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMHexagonDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMHexagonDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMHexagonInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLanaiCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLanaiAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLanaiDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLanaiDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLanaiInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMipsCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMipsAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMipsDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMipsDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMipsInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMSP430CodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMSP430AsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMSP430Desc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMSP430Disassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMSP430Info.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMNVPTXCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMNVPTXDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMNVPTXInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMPowerPCCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMPowerPCAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMPowerPCDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMPowerPCDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMPowerPCInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMRISCVCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMRISCVAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMRISCVDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMRISCVDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMRISCVInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSparcCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSparcAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSparcDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSparcDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSparcInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSystemZCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSystemZAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSystemZDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSystemZDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMSystemZInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMVECodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMVEAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMVEDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMVEDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMVEInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMWebAssemblyCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMWebAssemblyAsmParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMWebAssemblyDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMWebAssemblyDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMWebAssemblyInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMWebAssemblyUtils.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMXCoreCodeGen.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMXCoreDesc.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMXCoreDisassembler.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMXCoreInfo.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMOption.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMMIRParser.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMCoverage.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMLTO.lib
  debug ${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LLVMExtensions.lib

  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAArch64CodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAArch64AsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAArch64Desc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAArch64Disassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAArch64Info.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAArch64Utils.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAMDGPUCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAMDGPUAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAMDGPUDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAMDGPUDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAMDGPUInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAMDGPUUtils.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMARMCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMARMAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMARMDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMARMDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMARMInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMARMUtils.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAVRCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAVRAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAVRDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAVRDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAVRInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBPFCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBPFAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBPFDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBPFDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBPFInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMHexagonCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMHexagonAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMHexagonDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMHexagonDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMHexagonInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLanaiCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLanaiAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLanaiDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLanaiDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLanaiInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMipsCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMipsAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMipsDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMipsDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMipsInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMSP430CodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMSP430AsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMSP430Desc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMSP430Disassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMSP430Info.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMNVPTXCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMNVPTXDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMNVPTXInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMPowerPCCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMPowerPCAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMPowerPCDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMPowerPCDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMPowerPCInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMRISCVCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMRISCVAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMRISCVDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMRISCVDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMRISCVInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSparcCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSparcAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSparcDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSparcDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSparcInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSystemZCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSystemZAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSystemZDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSystemZDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSystemZInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMVECodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMVEAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMVEDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMVEDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMVEInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMWebAssemblyCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMWebAssemblyAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMWebAssemblyDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMWebAssemblyDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMWebAssemblyInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMWebAssemblyUtils.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMX86CodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMX86AsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMX86Desc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMX86Disassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMX86Info.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMXCoreCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMXCoreDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMXCoreDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMXCoreInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAnalysis.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMCore.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMipo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAggressiveInstCombine.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMInstCombine.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMInstrumentation.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMC.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMCParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMObjCARCOpts.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMOption.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMScalarOpts.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSupport.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMTransformUtils.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMVectorize.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangBasic.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangDriver.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangFrontend.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangFrontendTool.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangSerialization.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMIRParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMGlobalISel.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMCFGuard.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAsmPrinter.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMdebugInfoMSF.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSelectionDAG.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMCDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMCoverage.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLTO.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMPasses.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMTarget.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMCoroutines.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMIRReader.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBitWriter.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLinker.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMExtensions.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangRewriteFrontend.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangARCMigrate.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangStaticAnalyzerFrontend.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangStaticAnalyzerCheckers.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangStaticAnalyzerCore.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangCrossTU.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangIndex.lib  
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangParse.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangSema.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangAnalysis.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangASTMatchers.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangEdit.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangAST.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMFrontendOpenMP.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMProfileData.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMdebugInfoDWARF.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMObject.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMdebugInfoCodeView.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBitReader.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMTextAPI.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBinaryFormat.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMRemarks.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBitstreamReader.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangFormat.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangToolingInclusions.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangToolingCore.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangRewrite.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/clangLex.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMDemangle.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMCore.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMExecutionEngine.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMIRReader.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMInterpreter.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMJITLink.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMC.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMCJIT.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMObject.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMOrcShared.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMOrcJIT.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMOrcTargetProcess.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMPasses.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMRuntimeDyld.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSelectionDAG.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSupport.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMTarget.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMTransformUtils.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMX86CodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMX86AsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMX86Desc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMX86Disassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMX86Info.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMCoroutines.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMipo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMFrontendOpenMP.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLinker.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMObjCARCOpts.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMVectorize.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMInstrumentation.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAsmPrinter.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMdebugInfoMSF.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMGlobalISel.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBitWriter.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMScalarOpts.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAggressiveInstCombine.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMInstCombine.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAnalysis.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMProfileData.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMdebugInfoDWARF.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBitReader.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMTextAPI.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMCFGuard.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMRemarks.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBitstreamReader.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMCParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMCDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBinaryFormat.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMdebugInfoCodeView.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMDemangle.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAArch64CodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAArch64AsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAArch64Desc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAArch64Disassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAArch64Info.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAArch64Utils.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAMDGPUCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAMDGPUAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAMDGPUDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAMDGPUDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAMDGPUInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAMDGPUUtils.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMARMCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMARMAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMARMDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMARMDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMARMInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMARMUtils.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAVRCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAVRAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAVRDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAVRDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMAVRInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBPFCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBPFAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBPFDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBPFDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMBPFInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMHexagonCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMHexagonAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMHexagonDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMHexagonDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMHexagonInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLanaiCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLanaiAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLanaiDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLanaiDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLanaiInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMipsCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMipsAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMipsDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMipsDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMipsInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMSP430CodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMSP430AsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMSP430Desc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMSP430Disassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMSP430Info.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMNVPTXCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMNVPTXDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMNVPTXInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMPowerPCCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMPowerPCAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMPowerPCDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMPowerPCDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMPowerPCInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMRISCVCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMRISCVAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMRISCVDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMRISCVDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMRISCVInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSparcCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSparcAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSparcDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSparcDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSparcInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSystemZCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSystemZAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSystemZDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSystemZDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMSystemZInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMVECodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMVEAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMVEDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMVEDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMVEInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMWebAssemblyCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMWebAssemblyAsmParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMWebAssemblyDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMWebAssemblyDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMWebAssemblyInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMWebAssemblyUtils.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMXCoreCodeGen.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMXCoreDesc.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMXCoreDisassembler.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMXCoreInfo.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMOption.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMMIRParser.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMCoverage.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMLTO.lib
  optimized ${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LLVMExtensions.lib)

set_target_properties( rigpp PROPERTIES OUTPUT_NAME rigpp CLEAN_DIRECT_OUTPUT 1 SUFFIX ".mll" CXX_STANDARD 17)

MAYA_SET_PLUGIN_PROPERTIES( rigpp )

install(TARGETS rigpp RUNTIME DESTINATION .)

